packages/template-cli/templates/deploy/k8s/app/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stacks-webapp
  labels:
    app.kubernetes.io/name: stacks-webapp
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: stacks
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: stacks-webapp
      app.kubernetes.io/component: web
      app.kubernetes.io/part-of: stacks
  template:
    metadata:
      labels:
        app.kubernetes.io/name: stacks-webapp
        app.kubernetes.io/component: web
        app.kubernetes.io/part-of: stacks
    spec:
      containers:
        - name: web
          # this we need to pass from the pipeline to the deployment steps
          image: stacks-webapp-app-image:tag
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000

          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 45
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 25

          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 25
