packages/template-cli/templates/deploy/k8s/app/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: stacks-webapp
  labels:
    app.kubernetes.io/name: stacks-webapp
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: stacks
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: stacks-webapp
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: stacks
